syntax = "proto3";

package notification;

option go_package = "api-notification";

import "google/protobuf/timestamp.proto";

message SendNotificationRequest {
  string user_id = 1;
  string title = 2;
  string message = 3;
}

message SendNotificationResponse {
}

service NotificationService {
  rpc SendNotification(SendNotificationRequest) returns (SendNotificationResponse);
}
